--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529547629
+    created: 1529547699
     eco: null
-    guid: 99a1afb8-afde-44a2-b28d-576d767618ec
+    guid: 89a002dd-1bf6-47f9-8a6b-922e17375b33
     state: running
