--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529547629
+    created: 1529547699
     eco: null
-    guid: f4da489d-5e94-429a-a60f-c52d1327f3d4
+    guid: 771b5e2d-f683-4a26-8660-c4b3077eb571
     state: running
