--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529548079
+    eco: null
+    guid: 5f0cf085-d6c1-42c2-befb-c54b4dbb9f41
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529548079
+    eco: null
+    guid: 2e90b49b-fd9d-4305-989b-9902b984d001
+    state: new
