--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529548079
+    created: 1529548139
     eco: null
-    guid: c69c7922-5464-4e26-b0bb-78fa2627f462
+    guid: 099873b8-8d0c-489c-9128-d2cf631dbef0
     state: running
