--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529548649
+    eco: null
+    guid: ce800a57-b4cd-46b3-8849-d0d73f53b7bd
+    state: running
+-   action_name: save
+    args: null
+    created: 1529548649
+    eco: null
+    guid: 38205524-6b0d-4ad2-b9ac-bfeb82f447cf
+    state: new
