--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529549669
+    eco: null
+    guid: 57a2106a-2715-4c6d-9732-a788594e2389
+    state: running
+-   action_name: save
+    args: null
+    created: 1529549669
+    eco: null
+    guid: 8f95967b-d2b5-4244-9537-45c516f461cd
+    state: new
