--- a/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529550052
+    eco: null
+    guid: 8e9d1198-1280-42ca-b115-67b474e17d4e
+    state: running
