--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529550689
+    eco: null
+    guid: d4d7e8db-ee65-4650-9ddf-1ffa89d07b80
+    state: running
+-   action_name: save
+    args: null
+    created: 1529550689
+    eco: null
+    guid: 5f0a2730-1f98-4abe-9ee2-c32dd946db76
+    state: new
