--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529551259
+    eco: null
+    guid: cf137868-73dd-418c-be55-c02ae68faa3e
+    state: running
+-   action_name: save
+    args: null
+    created: 1529551259
+    eco: null
+    guid: fec0db79-8986-4619-830e-977eb476a203
+    state: new
