--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529553029
+    created: 1529553089
     eco: null
-    guid: b71f464d-ae5c-4ebd-8b18-47d34633027b
+    guid: 26fdeaa1-3e99-4cfe-afdb-5bca6e2dfd65
     state: running
+-   action_name: save
+    args: null
+    created: 1529553089
+    eco: null
+    guid: a16863b6-284b-4a7d-bbf6-89ba3808739f
+    state: new
