--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529553659
+    eco: null
+    guid: fa34328a-aa93-4644-81a7-58f877a2438f
+    state: running
+-   action_name: save
+    args: null
+    created: 1529553659
+    eco: null
+    guid: 6d7585f6-d5e0-419f-9d60-5fc41d201732
+    state: new
