--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529555999
+    eco: null
+    guid: 380a2bd5-53c3-40ec-9bb8-f517ccc2e680
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529555999
+    eco: null
+    guid: 679f4d05-8506-4ecc-bf0e-a4373fd1d3e6
+    state: new
