--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529557079
+    eco: null
+    guid: cbdd8b4c-abe8-420a-974f-9b74a563367b
+    state: running
+-   action_name: save
+    args: null
+    created: 1529557079
+    eco: null
+    guid: a07f2a0b-ebd4-4b2d-8159-49ce85612164
+    state: new
