--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529557589
+    created: 1529557649
     eco: null
-    guid: 5acd0222-a792-4138-94ef-259d4d73a772
+    guid: 82c46da6-8b26-4ab5-bb9b-479e74e7ced3
     state: running
