--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529558729
+    eco: null
+    guid: a0388020-5a53-4d4f-a7c6-ac2189306198
+    state: running
+-   action_name: save
+    args: null
+    created: 1529558729
+    eco: null
+    guid: ca908330-9311-4363-aa28-87faad1694f2
+    state: new
