--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529559239
+    eco: null
+    guid: dacfe6a6-4bed-48a0-8bad-bf487ffe1dde
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529559239
+    eco: null
+    guid: ebf43c8f-426a-49b5-94f4-f44aee9592d1
+    state: new
