--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529559239
+    eco: null
+    guid: 23d3fca5-9b57-44af-b0ed-a9ea052265bb
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529559239
+    eco: null
+    guid: d46b8b79-7230-416f-ad4a-0040a58d393f
+    state: new
