--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529559239
+    created: 1529559299
     eco: null
-    guid: 7f9742a5-5481-4861-8023-b566a4e5f4b9
+    guid: 40ad788d-da7f-41c4-9063-d375bb820684
     state: running
+-   action_name: save
+    args: null
+    created: 1529559299
+    eco: null
+    guid: 71fb7e33-aed6-4c3f-9225-cadea80d6148
+    state: new
