--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529560319
+    created: 1529560389
     eco: null
-    guid: e685d1b6-a21e-4f88-838c-0821edc71c5e
+    guid: d9fcf3a3-77ab-41ef-8169-b453348e26d0
     state: running
