--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529560319
+    created: 1529560389
     eco: null
-    guid: fc8f4367-7e2b-4110-927d-21b5743f561e
+    guid: 2b32482d-c7ff-42f4-82c4-7900a8b79bf4
     state: running
