--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529562029
+    created: 1529562089
     eco: null
-    guid: 58d011b1-e8de-4f25-871f-d1a2068c5e42
+    guid: 83328f6d-6b5e-4431-b460-fcddfd89ab2f
     state: running
+-   action_name: save
+    args: null
+    created: 1529562089
+    eco: null
+    guid: f29890dd-4119-4abb-9b6b-bac3b709b19f
+    state: new
