--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529562089
+    created: 1529562159
     eco: null
-    guid: 17221078-57c2-4a84-bd46-023213f9576f
+    guid: 491a8cf7-6df0-47bd-b38c-13df58aa6025
     state: running
