--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529562539
+    eco: null
+    guid: 3701f909-9752-4fda-975e-635e5e59c6ff
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529562539
+    eco: null
+    guid: 43f9d4b7-37c9-4b6a-8267-236e1b73768b
+    state: new
