--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,12 @@
+-   action_name: _monitor
+    args: null
+    created: 1529562599
+    eco: null
+    guid: 9b242f57-1508-42f2-a290-f98c457a6fcd
+    state: running
 -   action_name: save
     args: null
-    created: 1529562539
+    created: 1529562599
     eco: null
-    guid: ed47113d-643a-4ebc-a7e5-f04fa5026af9
-    state: running
+    guid: d668dc62-766e-419c-8ae9-dd94ed24adde
+    state: new
