--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529563619
+    created: 1529563679
     eco: null
-    guid: ab725432-69a8-4987-8afd-e34f278066a6
+    guid: 7ccecdb9-68a5-49bc-a34d-7195b07216a1
     state: running
+-   action_name: save
+    args: null
+    created: 1529563679
+    eco: null
+    guid: 9e45ad3a-8fe1-4537-b4e7-d83d31892bd5
+    state: new
