--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529564729
+    eco: null
+    guid: 6da6e7b2-990f-492c-afcd-247c9b4a38b9
+    state: running
+-   action_name: save
+    args: null
+    created: 1529564729
+    eco: null
+    guid: 4edff420-c8a6-455c-a7ca-aef3093d0f18
+    state: new
