--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529564729
+    created: 1529564799
     eco: null
-    guid: 43f3685e-897b-486a-934d-d39ff9ac1434
+    guid: 8340dcd7-5a75-4f2f-827b-d24cbe97d66b
     state: running
