--- a/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529565592
+    eco: null
+    guid: c7fb1b74-1add-4fc9-8f8d-e7ea9c6d370f
+    state: running
