--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529567249
+    eco: null
+    guid: 9ffa73ad-c0cf-45f0-9850-2d25f1f04b50
+    state: running
+-   action_name: save
+    args: null
+    created: 1529567249
+    eco: null
+    guid: 4582e102-6cf3-4991-93dd-4899dd31051f
+    state: new
