--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529567699
+    eco: null
+    guid: 3f9a9607-8083-400e-b9f3-10a90e7dbcba
+    state: running
+-   action_name: save
+    args: null
+    created: 1529567699
+    eco: null
+    guid: c2dd7258-b381-45d0-becf-babbe2133b43
+    state: new
