--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529567699
+    created: 1529567769
     eco: null
-    guid: da7797d3-304e-4b3f-86db-470b586770b3
+    guid: f20dcc08-0143-4e38-8229-977d0b5c748f
     state: running
