--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529568149
+    created: 1529568209
     eco: null
-    guid: c3bae93f-c89d-4d79-90f6-54bbe9842ba2
+    guid: d3de9d4c-f712-4099-a807-d932ef17e7fb
     state: running
+-   action_name: save
+    args: null
+    created: 1529568209
+    eco: null
+    guid: 9cb811ec-2594-4257-97e7-040e1bb7608e
+    state: new
