--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529568149
+    created: 1529568209
     eco: null
-    guid: cc441602-a8f4-4a76-b696-e4dbc3f115e7
+    guid: 83291c6c-86d0-4e5a-8bb9-ad2e517c8ff2
     state: running
