--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529568659
+    eco: null
+    guid: ee1f945e-c5a7-49f7-9872-9d0af9698fe1
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529568659
+    eco: null
+    guid: 29becb76-7377-4eb0-8057-4e615a648988
+    state: new
