--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529568659
+    created: 1529568719
     eco: null
-    guid: d62aa499-1d09-4f02-8238-181e5011431a
+    guid: f9a549a0-867d-41c5-b725-f8501a594ef4
     state: running
